--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,3 +1,18 @@
+.introBox {
+  min-height: 400px;
+  width: fill;
+  // width: 70%;
+  border: 5px solid black;
+  /* Stretch intro box to fill out inner container. */
+}
+
+.infoSection {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+
 .container {
   min-height: 100vh;
   padding: 0 0.5rem;
