Separate desktop and mobile views for some components

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -17,30 +17,6 @@
   align-items: center;
 }
 
-.introBox {
-  min-height: 400px;
-  width: fill;
-  // width: 70%;
-  border: 5px solid black;
-  /* Stretch intro box to fill out inner container. */
-  padding: 55px 66px 0 66px;
-}
-
-.infoSection {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-}
-
-.profile {
-  border-radius: 250px;
-}
-
-.infoTextSection {
-  margin-left: 50px;
-}
-
-
 
 
 .footer {
@@ -145,3 +121,33 @@
     flex-direction: column;
   }
 }
+
+
+// Web
+
+.introBox {
+  min-height: 400px;
+  width: fill;
+  max-width: 77rem;
+  // width: 70%;
+  border: 5px solid black;
+  /* Stretch intro box to fill out inner container. */
+  padding: 55px 66px 0 66px;
+}
+
+.infoSection {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.profile {
+  border-radius: 250px;
+}
+
+.infoTextSection {
+  margin-left: 50px;
+}
+
+// Mobile
+
