Update website with content and finish Web + Mobile homepage V1

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,5 @@
+@use './breakpoints' as bp;
+
 html,
 body {
   padding: 0;
@@ -16,13 +18,33 @@ p, h1 {
 }
 
 h1 {
-  font-size: 64px;
+  font-size: 4rem;
 }
 
 * {
   box-sizing: border-box;
 }
 
-.textGray {
+:root {
+  font-size: 16px;
+  @media only screen and (max-width: bp.$breakpoint-md) {
+    font-size: 14px;
+  }
+}
+
+.gray {
   color: #8E8E8E;
+}
+
+.bold {
+  font-weight: 700;
+}
+
+.line-space {
+  margin-bottom: 0.625rem;
+}
+
+.justify {
+  text-align: justify;
+  text-justify: inter-word;
 }
