--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,9 +1,11 @@
+@use './breakpoints' as bp;
+
 .container {
   min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  // justify-content: center;
   align-items: center;
   height: 100vh;
 }
@@ -17,136 +19,77 @@
   align-items: center;
 }
 
-
-
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
-}
-
-
 // Web
 
 .introBox {
-  min-height: 400px;
+  min-height: 25rem;
+  /* Stretch intro box to fill out inner container. */
   width: fill;
   max-width: 77rem;
-  // width: 70%;
-  border: 5px solid black;
-  /* Stretch intro box to fill out inner container. */
-  padding: 55px 66px 0 66px;
+  border: 0.3125rem solid black;
+  padding: 3.5rem 4rem;
+  @media only screen and (max-width: bp.$breakpoint-md) {
+    flex-direction: column;
+    align-items: center;
+    border: none;
+    padding: 2rem 2.5rem;
+  }
 }
 
 .infoSection {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+  justify-content: space-between;
+  @media only screen and (max-width: bp.$breakpoint-md) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .profile {
-  border-radius: 250px;
+  border-radius: 15.625rem;
 }
 
 .infoTextSection {
-  margin-left: 50px;
+  margin-left: 3.125rem;
+  flex: 1 0;
+  @media only screen and (max-width: bp.$breakpoint-md) {
+    //flex-direction: column;
+    margin-left: 0;
+    margin-bottom: 1.25rem;
+    text-align: center;
+  }
+}
+
+.blurbSection {
+  margin-top: 3rem;
+  @media only screen and (max-width: bp.$breakpoint-md) {
+    //flex-direction: column;
+    margin-top: 5rem;
+  }
+}
+
+.contactSection {
+  display: flex;
+  flex-direction: row;
+  
+  // Any child component:
+  & > * {
+    margin-left: 1.25rem;
+  }
+
+  & > *:first-child {
+    margin: 0;
+  }
+}
+
+.contactItem {
+  text-align: center;
+}
+
+svg.contactIcon {
+  font-size: 4rem;
 }
 
 // Mobile
